Add latest quick run